# mediawiki_rust

./: Cargo.toml
src/: api.rs  api_sync.rs  error.rs  lib.rs  method.rs  page.rs  params.rs  title.rs  user.rs
